# hiaidemo

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/huawei/hiaidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  buildmodel.cpp  classify_async_jni.cpp  classify_jni.cpp  createModel.cpp  hiaijni.cpp
app/src/main/java/com/huawei/hiaidemo/: MainActivity.java
app/src/main/java/com/huawei/hiaidemo/utils/: ModelManager.java  ModelManagerListener.java  Untils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/huawei/hiaidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
